# D4S

./: Test_geometry_Li_Bz.xyz  Test_script.py  pyproject.toml
D4S/: D4S.py  beta_2_m2_300.data
d4s/: D4S.py  R2R4.txt  __init__.py  fortran_data.json  make_plots.py  reference.inc  sec_fortran_data.json
tests/: Test_script.py
